--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <!-- fixed-top -->
     <div class="logo">
       <img src="../../../assets/images/logo3.png" alt="">
-      <a class="navbar-brand" href="#">Amnesia</a>
+      <a class="navbar-brand" routerLink="/">Amnesia</a>
     </div>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -46,7 +46,7 @@
           <li class="nav-item pl-2">
             <span class="cart_Count">
               <!-- <span class="s">{{cartCount}}</span> -->
-              <span class="s">{{count}}</span>
+              <span class="s">{{cartCount}}</span>
               <a class="nav-link" routerLink='/cart'>
                 <i class="fas fa-shopping-basket"></i></a>
             </span>
