--- a/src/app/components/cart-buy/cart-buy.component.html
+++ b/src/app/components/cart-buy/cart-buy.component.html
@@ -8,14 +8,10 @@
                         <!-- firstname -->
                         <div class="form-group">
                             <input type="text" class="form-control"
-                                *ngIf="myForm.controls.firstname.errors else correctFirstName" appValidationError
+                                
                                 id="firstname" placeholder="First name" name="firstname" formControlName="firstname"
                                 required>
-                            <ng-template #correctFirstName>
-                                <input type="text" class="form-control" appValidationCorrect id="firstname"
-                                    placeholder="First name" name="firstname" formControlName="firstname" required>
-                            </ng-template>
-                            <div *ngIf="myForm.controls.firstname.errors" class="error text-danger">
+                            <div *ngIf="myForm.controls.firstname.errors && myForm.controls.firstname.touched" class="error text-danger">
                                 <p *ngIf="myForm.controls.firstname.errors.required">Name is Required</p>
                                 <p *ngIf="myForm.controls.firstname.errors.maxlength">Name must be less than 8
                                     characters
@@ -26,13 +22,10 @@
                         <!-- lastname -->
                         <div class="form-group">
                             <input type="text" class="form-control"
-                                *ngIf="myForm.controls.lastname.errors else correctln" appValidationError id="lastname"
+                                id="lastname"
                                 placeholder="Last name" name="lastname" formControlName="lastname" required>
-                            <ng-template #correctln>
-                                <input type="text" class="form-control" appValidationCorrect id="lastname"
-                                    placeholder="Last name" name="lastname" formControlName="lastname" required>
-                            </ng-template>
-                            <div *ngIf="myForm.controls.lastname.errors" class="error text-danger">
+                            
+                            <div *ngIf="myForm.controls.lastname.errors && myForm.controls.lastname.touched" class="error text-danger">
                                 <p *ngIf="myForm.controls.lastname.errors.required">Name is Required</p>
                                 <p *ngIf="myForm.controls.lastname.errors.maxlength">Name must be less than 8 characters
                                 </p>
@@ -42,13 +35,10 @@
                         <!-- phone -->
                         <div class="form-group">
                             <input type="text" class="form-control"
-                                *ngIf="myForm.controls.phone.errors else correctphone" appValidationError id="phone"
+                                 id="phone"
                                 placeholder="phone" name="phone" formControlName="phone" required>
-                            <ng-template #correctphone>
-                                <input type="text" class="form-control" appValidationCorrect id="phone"
-                                    placeholder="phone" name="phone" formControlName="phone" required>
-                            </ng-template>
-                            <div *ngIf="myForm.controls.phone.errors" class="error text-danger">
+                            
+                            <div *ngIf="myForm.controls.phone.errors && myForm.controls.phone.touched" class="error text-danger">
                                 <p *ngIf="myForm.controls.phone.errors.required">phone is Required</p>
                                 <!-- <p *ngIf="myForm.controls.phone.errors.pattern">phone must be 11 number</p> -->
                                 <p *ngIf="myForm.controls.phone.errors.pattern">phone must be numbers only</p>
@@ -57,27 +47,18 @@
                         <!-- country -->
                         <div class="form-group">
                             <input type="country" class="form-control"
-                                *ngIf="myForm.controls.country.errors else correctcountry" appValidationError
                                 id="country" placeholder="country" name="country" formControlName="country" required>
-                            <ng-template #correctcountry>
-                                <input type="text" class="form-control" appValidationCorrect id="country"
-                                    placeholder="country" name="country" formControlName="country" required>
-                            </ng-template>
-                            <div *ngIf="myForm.controls.country.errors" class="error text-danger">
+                           
+                            <div *ngIf="myForm.controls.country.errors && myForm.controls.country.touched" class="error text-danger">
                                 <p *ngIf="myForm.controls.country.errors.required">country is Required</p>
                                 <p *ngIf="myForm.controls.country.errors.city">country must be characters only</p>
                             </div>
                         </div>
                         <!-- city -->
                         <div class="form-group">
-                            <input type="city" class="form-control" *ngIf="myForm.controls.city.errors else correctcity"
-                                appValidationError id="city" placeholder="city" name="city" formControlName="city"
+                            <input type="city" class="form-control" id="city" placeholder="city" name="city" formControlName="city"
                                 required>
-                            <ng-template #correctcity>
-                                <input type="text" class="form-control" appValidationCorrect id="city"
-                                    placeholder="city" name="city" formControlName="city" required>
-                            </ng-template>
-                            <div *ngIf="myForm.controls.city.errors" class="error text-danger">
+                            <div *ngIf="myForm.controls.city.errors && myForm.controls.city.touched" class="error text-danger">
                                 <p *ngIf="myForm.controls.city.errors.required">country is Required</p>
                                 <p *ngIf="myForm.controls.city.errors.pattern">city must be characters only</p>
                             </div>
@@ -85,26 +66,19 @@
                         <!-- street -->
                         <div class="form-group">
                             <input type="text" class="form-control"
-                                *ngIf="myForm.controls.street.errors else correctstreet" appValidationError id="street"
+                                 id="street"
                                 placeholder="street" name="street" formControlName="street" required>
-                            <ng-template #correctstreet>
-                                <input type="text" class="form-control" appValidationCorrect id="street"
-                                    placeholder="street" name="street" formControlName="street" required>
-                            </ng-template>
-                            <div *ngIf="myForm.controls.street.errors" class="error text-danger">
+                            <div *ngIf="myForm.controls.street.errors && myForm.controls.street.touched" class="error text-danger">
                                 <p *ngIf="myForm.controls.street.errors.required">street is Required</p>
                             </div>
                         </div>
                         <!-- notes -->
                         <div class="form-group">
                             <textarea class="form-control rounded-0"
-                                *ngIf="myForm.controls.note.errors else correctnote" appValidationError name="note"
+                               name="note"
                                 formControlName="note" id="note" rows="3" placeholder="Add note"></textarea>
-                            <ng-template #correctnote>
-                                <textarea class="form-control rounded-0" appValidationCorrect name="note"
-                                    formControlName="note" id="note" rows="3" placeholder="Add note"></textarea>
-                            </ng-template>
-                            <div *ngIf="myForm.controls.note.errors" class="error text-danger">
+                            
+                            <div *ngIf="myForm.controls.note.errors && myForm.controls.note.touched" class="error text-danger">
                                 <p *ngIf="myForm.controls.note.errors.required">note is Required</p>
                             </div>
                         </div>
@@ -143,7 +117,7 @@
                             </button>
                         </div>
                         <!-- buy btn -->
-                        <button type="submit" class="btn rounded-0" id="buy" (click)="buy()">Buy Now</button>
+                        <button type="submit" class="btn rounded-0" [disabled]="myForm.invalid" id="buy" (click)="buy()">Buy Now</button>
                     </form>
                     <div id='orderSuccess'>
                         <h2><i class="far fa-check-circle"></i>  Order Sent Successfully</h2>
