--- a/src/app/components/contact-us/contact-us.component.html
+++ b/src/app/components/contact-us/contact-us.component.html
@@ -9,7 +9,7 @@
         <hr>
       </div>
       
-      <div class="col-6">
+      <div class="col-sm-12 col-md-6">
         <div class="col-md-offset-1" id="box">
 
           <form #f=ngForm class="form-horizontal" name="contactForm" (ngSubmit)="submitContactForm()">
