--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,8 +2,8 @@
   <div class="container-fluid mb-4">
     <div class="row">
       <div class="col-md-6 header">
-        <p>WE MAKE BEST MAKEUP</p>
-        <h3>Amnesia</h3>
+        <p class="pb-2">We Have the best Makeup</p>
+        <h3 class="webapp-title">Amnesia</h3>
         <button (click)="shopnow()" type="button" class="btn btn-primary rounded-0">Shop Now</button>
       </div>
     </div>
@@ -13,44 +13,48 @@
 <!-- product sale -->
 <section id="feature-product">
   <div class="container">
-    <div class="row">
+    <div class="row w-75">
       <div class="col-md-12">
         <h2>Products <b>Sales</b></h2>
-        <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="0">
+        <!-- <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="0"> -->
           <!-- Wrapper for carousel items -->
-          <div class="carousel-inner">
-            <div class="carousel-item active">
+          <!-- <div class="carousel-inner">
+            <div class="carousel-item active"> -->
               <div class="row">
-                <div class="col-sm-3" *ngFor="let product of products; index as i;">
-                  <div class="classOfStatus">Sale</div>
-                  <!-- <div class="classOfStatus">
-                    <img src="../../../assets/images/sale.png" alt="sale">
-                  </div> -->
-                  <div class="thumb-wrapper active">
-                    <div class="img-box">
-                      <img [src]="productImage[i]" class="img-fluid" alt="">
+                  <ng-container *ngFor="let product of products; index as i;">
+                    <div class="classOfStatus">Sale</div>
+                    <div class="thumb-wrapper active">
+                      <div class="img-box">
+                        <img [src]="productImage[i]" class="img" height="18rem;" alt="">
+                      </div>
+                      <div class="thumb-content">
+                        <h4>{{product.name}}</h4>
+                        <p class="item-price">
+                          <span class="oldPrice">${{product.old_price}}</span>
+                          <span class="newPrice">${{product.current_price}}</span>
+                        </p>
+                        <a class="btn rounded-0" (click)="productDetails(product._id)">More Details</a>
+                      </div>
                     </div>
-                    <div class="thumb-content">
-                      <h4>{{product.name}}</h4>
-                      <p class="item-price">
-                        <span class="oldPrice">${{product.old_price}}</span>
-                        <span class="newPrice">${{product.current_price}}</span>
-                      </p>
-                      <a class="btn rounded-0" (click)="productDetails(product._id)">More Details</a>
-                    </div>
-                  </div>
-                </div>
+                  </ng-container>
               </div>
-            </div>
-          </div>
+              <div>Some tags before</div>
+              <owl-carousel-o [options]="customOptions">
+                <ng-template carouselSlide>Slide 1</ng-template>  
+                <ng-template carouselSlide>Slide 2</ng-template>  
+                <ng-template carouselSlide>Slide 3</ng-template>  
+              </owl-carousel-o>
+              <div>Some tags after</div>
+            <!-- </div> -->
+          <!-- </div> -->
           <!-- Carousel controls -->
-          <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+          <!-- <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
             <i class="fa fa-angle-left"></i>
           </a>
           <a class="carousel-control-next" href="#myCarousel" data-slide="next">
             <i class="fa fa-angle-right"></i>
-          </a>
-        </div>
+          </a> -->
+        <!-- </div> -->
       </div>
     </div>
   </div>
@@ -148,8 +152,8 @@
 
 
 <!-- scroll -->
-<a id="scrollUp" href="#hero" style="display: block; position: fixed; " (click)="topFunction()"><i
-    class="fa fa-angle-up"></i></a>
+<!-- <a id="scrollUp" href="#hero" style="display: block; position: fixed; " (click)="topFunction()"><i
+    class="fa fa-angle-up"></i></a> -->
 
 <!-- ourclient -->
 <section id="clients">
