--- a/src/app/components/product-card/product-card.component.css
+++ b/src/app/components/product-card/product-card.component.css
@@ -10,6 +10,9 @@
   right: 0;
   z-index: 4;
 }
+.hide{
+  display: none;
+}
 .button_slide {
   border: 2px solid #F65B5F;
   color: #F65B5F;
@@ -51,7 +54,7 @@
   border:2px #F65B5F; 
   position: absolute;
   top: 200px;
-  left: 65px;
+  left: 20%;
   opacity: 1;
   transition: 0.7s all;
   cursor: pointer;
@@ -59,8 +62,8 @@
 .options-disappear{
   opacity: 0;
   position: absolute;
-  top: 250px;
-  left: 65px;
+  top: 200px;
+  left: 0;
   transition: 0.7s all;
   pointer-events: none;
 }
@@ -83,7 +86,7 @@
   pointer-events: none;
 }
 img{
-  width: 250px;
+  /* width: 250px; */
   height: 250px;
 }
 .badge{
