--- a/src/app/components/product-view/product-view.component.html
+++ b/src/app/components/product-view/product-view.component.html
@@ -1,5 +1,5 @@
 <section id="prodct-view">
-    <div class="container product-info p-0">
+    <div class="container mt-5 product-info p-0">
         <h1 class="product-name p-2">{{product.name}}</h1>
         <div id="bandage" [class]="product.status">
             {{product.status}}
@@ -53,3 +53,4 @@
         </div>
     </div>
 </section>
+<app-footer></app-footer>
