--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -4,7 +4,7 @@
       <fa-icon [icon]="faHeart" (click)="changeHeartColor(_id)" class="vertical" size="2x" [styles]="{'color': heartIcon}" pull="right"></fa-icon>
     </div>
     <div [class]="options">
-      <button (click)="gotoProdInfo()" mat-raised-button color="warn">Know more</button>
+      <button (click)="gotoProdInfo()" mat-raised-button color="warn">{{'prodCard.knowMoreBtn' | translate}}</button>
     </div>
     <!-- <img [src]="image" class="card-img-top border-1" alt="..."> -->
     <!-- <img src="https://media.allure.com/photos/5c1933c41f198f2c6627f8c8/1:1/w_400%2Cc_limit/tatcha-violet-c-serum.jpg" class="card-img-top border-1" alt="..."> -->
@@ -23,11 +23,11 @@
         <span class="current-price d-block">${{current_price}}</span>
         <span class="old-price d-block">${{old_price}}</span>
       </p>
-      <div class="container text-center d-flex align-items-center text-nowrap py-2 px-1 button_slide slide_right">
+      <div (click)="addToCart($event,_id)" class="container text-center d-flex align-items-center text-nowrap py-2 px-1 button_slide slide_right">
         <span class="d-inline-block mr-1">
           <fa-icon [icon]="faCartPlus" size="lg" [styles]="{'color': 'white'}" pull="right"></fa-icon> 
         </span>
-        <span class="d-inline-block pt-1" (click)="addToCart($event,_id)">{{addToCartBtn}}</span> 
+        <span class="d-inline-block pt-1" >{{addToCartBtn}}</span> 
       </div>
     </div>
   </div>
