--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -3,7 +3,7 @@
         <div class="row img">
             <div class="col-lg-12">
                 <!-- <img src="../../../assets/images/cart3.png" alt=""> -->
-                <h2>My Cart</h2>
+                <h2>{{'cart.mycart' | translate}}</h2>
             </div>
         </div>
         <div class="row">
@@ -12,11 +12,11 @@
                 <table class="table">
                     <thead>
                         <tr>
-                            <th scope="col">Image</th>
-                            <th scope="col">Product</th>
-                            <th scope="col">Count</th>
-                            <th scope="col">Price</th>
-                            <th scope="col">Remove</th>
+                            <th scope="col">{{'cart.image' | translate}}</th>
+                            <th scope="col">{{'cart.product' | translate}}</th>
+                            <th scope="col">{{'cart.count' | translate}}</th>
+                            <th scope="col">{{'cart.price' | translate}}</th>
+                            <th scope="col">{{'cart.remove' | translate}}</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -36,14 +36,14 @@
         <div class="row cartInfo">
             <div class="col-sm-6">
                 <div class="row">
-                    <i class="fas fa-arrow-left"> Continue Shopping</i>
+                    <i class="fas fa-arrow-left">{{'cart.continueShopping' | translate}}</i>
                 </div>
             </div>
             <div class="col-sm-6 total">
-                <h4>Cart Total Price</h4>
+                <h4>{{'cart.CartTotalPrice' | translate}}</h4>
                 <p>$ {{totalPrice}}</p>
                 <!-- <button class="btn rounded-0" id="buyNow" (click)="crmOrder()">Confirm Order</button> -->
-                <button class="btn rounded-0" id="buyNow" [routerLink]="['/cartBuy']" >Confirm Order</button>
+                <button class="btn rounded-0" id="buyNow" [routerLink]="['/cartBuy']" >{{'cart.confirmOrder' | translate}}</button>
             </div>
         </div>
     </div>
