--- a/src/app/components/contact-us/contact-us.component.html
+++ b/src/app/components/contact-us/contact-us.component.html
@@ -5,7 +5,7 @@
   <div class="container">
     <div class="row" style="margin-bottom:15px;">
       <div class="col-lg-12">
-        <h2 class="colr">Contact Us!</h2>
+        <h2 class="colr">{{'contactus.header' | translate}}</h2>
         <hr>
       </div>
       
@@ -21,10 +21,9 @@
                   <div class="input-group">
                     <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
                     <input name="first_name" #fn=ngModel pattern="^[a-zA-Z]+" [(ngModel)]="contactUs.fullname"
-                      placeholder="Name" class="form-control rounded-0" type="text" required>
+                      [placeholder]="{{'contact.name' | translate}}" class="form-control rounded-0" type="text" required>
                   </div>
-                  <span class="help-block" *ngIf="fn?.value?.length == 0  && fn.touched" style="color: red;">Username is
-                    required.</span>
+                  <span class="help-block" *ngIf="fn?.value?.length == 0  && fn.touched" style="color: red;">{{'contactus.usernameReq' | translate}}</span>
                 </div>
               </div>
               <!-- Text input Subject-->
@@ -33,10 +32,9 @@
                   <div class="input-group">
                     <span class="input-group-addon"><i class="glyphicon glyphicon-bookmark "></i></span>
                     <input name="subject" #sn=ngModel pattern="^[a-zA-Z]+" [(ngModel)]="contactUs.subject"
-                      placeholder="Subject" class="form-control rounded-0" type="text" required>
+                      placeholder="{{'contact.subject' | translate}}" class="form-control rounded-0" type="text" required>
                   </div>
-                  <span class="help-block" *ngIf="sn?.value?.length == 0 && sn.dirty && sn.touched" style="color: red;">Subject is
-                    required.</span>
+                  <span class="help-block" *ngIf="sn?.value?.length == 0 && sn.dirty && sn.touched" style="color: red;">{{'contactus.subjectReq' | translate}}</span>
                 </div>
               </div>
               <!-- Text input Email-->
@@ -44,12 +42,10 @@
                 <div class="col-md-12" ng-class="{ 'has-error' : f.em.$invalid && !f.em.$pristine }">
                   <div class="input-group">
                     <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-                    <input name="email" #em=ngModel [(ngModel)]="contactUs.email" placeholder="E-Mail Address"
+                    <input name="email" #em=ngModel [(ngModel)]="contactUs.email" placeholder="{{'contact.emailAd' | translate}}"
                       class="form-control rounded-0" type="email" pattern="^[a-zA-Z]{1}[a-zA-Z0-9.\-_]*@[a-zA-Z]{1}[a-zA-Z.-]*[a-zA-Z]{1}[.][a-zA-Z]{3,}$" required>
                   </div>
-                  <span style="color: red;" *ngIf="em.invalid && em.dirty && em.touched" > Enter a
-                    valid
-                    email.</span>
+                  <span style="color: red;" *ngIf="em.invalid && em.dirty && em.touched" > {{'contactus.emailInV' | translate}}</span>
                 </div>
               </div>
               <!-- Text input phone-->
@@ -59,10 +55,9 @@
                   <div class="input-group">
                     <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
                     <input type="text" #ph=ngModel [(ngModel)]="contactUs.phone" class="form-control rounded-0" name="phone"
-                      pattern="^[0-9]{11}$" placeholder="Enter your Phone" required>
+                      pattern="^[0-9]{11}$" placeholder="{{'contact.phone' | translate}}" required>
                   </div>
-                  <span style="color: red;" *ngIf="ph.invalid && ph.dirty && ph.touched">Phone Number is
-                    required.</span>
+                  <span style="color: red;" *ngIf="ph.invalid && ph.dirty && ph.touched">{{'contactus.phoneReq' | translate}}</span>
                 </div>
               </div>
 
@@ -73,17 +68,16 @@
                   <div class="input-group">
                     <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
                     <textarea class="form-control rounded-0" #ms=ngModel [(ngModel)]="contactUs.message" rows="6" name="comment"
-                      placeholder="Message" ng-maxlength="255" ng-minlength="10" required></textarea>
+                      placeholder="{{'contact.message' | translate}}" ng-maxlength="255" ng-minlength="10" required></textarea>
                   </div>
-                  <span style="color: red;" *ngIf="ms?.value?.length == 0 && ms.touched" class="help-block"> Enter a
-                    Message.</span>
+                  <span style="color: red;" *ngIf="ms?.value?.length == 0 && ms.touched" class="help-block"> {{'contactus.messageReq' | translate}}</span>
                 </div>
               </div>
               <div class="form-group">
                 <div class="col-md-12">
                   <button type="submit" gv class="btn  pull-right rounded-0"
                   [disabled] = "em.invalid"
-                   >Send
+                   >{{'contactus.sendBtm' | translate}}
                   </button>
                 </div>
               </div>
